--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ dev/*
 .env.development.local
 .env.test.local
 .env.production.local
+docker-compose.override.yml
 
 npm-debug.log*
 yarn-debug.log*
